buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group 'us.yugen.ointy'
version '1.0-SNAPSHOT'

bootJar {
    baseName = 'us.yugen.yaxyxsc'
    version = '1.0.0-SNAPSHOT'
}

jar {
    manifest {
        attributes 'Main-Class': 'us.yugen.yaxyxsc.Main'
    }
}

repositories {
    mavenCentral()
}

sourceCompatibility = 10
targetCompatibility = 10

dependencies {
    compile("org.springframework.boot:spring-boot-starter-web")
    testCompile("junit:junit")
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile group: 'com.aparapi', name: 'aparapi', version: '1.9.0'
    compile group: 'com.javadocmd', name: 'simplelatlng', version: '1.3.1'
    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
    // https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java
    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
    compile 'se.walkercrou:google-places-api-java:2.1.2'
//    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
    // https://mvnrepository.com/artifact/com.google.android/android
//    compile group: 'com.google.android', name: 'android', version: '4.1.1.4'
    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'

}